--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "build": "tsc",
     "lint": "eslint --ignore-path .gitignore . --ext .ts",
     "lint:fix": "npm run lint -- --fix",
-    "test": "jest --verbose"
+    "test": "jest --verbose --watch"
   },
   "author": "",
   "license": "ISC",
@@ -30,10 +30,14 @@
     "prettier": "2.5.1",
     "supertest": "6.2.2",
     "ts-jest": "27.1.3",
-    "ts-node-dev": "1.1.8",
+    "ts-node-dev": "^2.0.0-0",
     "typescript": "4.5.5"
   },
   "dependencies": {
-    "express": "4.17.2"
+    "express": "4.17.2",
+    "http-status-codes": "^2.2.0",
+    "pg": "^8.7.3",
+    "reflect-metadata": "^0.1.13",
+    "typeorm": "^0.3.6"
   }
 }
