--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@types/jest": "27.4.0",
     "@types/node": "17.0.17",
     "@types/supertest": "2.0.11",
+    "@types/uuid": "^8.3.4",
     "@typescript-eslint/eslint-plugin": "5.11.0",
     "@typescript-eslint/parser": "5.11.0",
     "eslint": "8.9.0",
@@ -36,8 +37,10 @@
   "dependencies": {
     "express": "4.17.2",
     "http-status-codes": "^2.2.0",
+    "joi": "^17.6.0",
     "pg": "^8.7.3",
     "reflect-metadata": "^0.1.13",
-    "typeorm": "^0.3.6"
+    "typeorm": "^0.3.6",
+    "uuid": "^8.3.2"
   }
 }
