--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/cors": "^2.8.12",
     "@types/express": "4.17.13",
     "@types/jest": "27.4.0",
     "@types/node": "17.0.17",
@@ -35,6 +36,7 @@
     "typescript": "4.5.5"
   },
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "4.17.2",
     "http-status-codes": "^2.2.0",
     "joi": "^17.6.0",
