--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "typescript": "4.5.5"
   },
   "dependencies": {
+    "@joi/date": "^2.1.0",
     "cors": "^2.8.5",
     "express": "4.17.2",
     "http-status-codes": "^2.2.0",
