--- a/package.json
+++ b/package.json
@@ -14,9 +14,11 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/bcrypt": "^5.0.0",
     "@types/cors": "^2.8.12",
     "@types/express": "4.17.13",
     "@types/jest": "27.4.0",
+    "@types/jsonwebtoken": "^8.5.8",
     "@types/node": "17.0.17",
     "@types/supertest": "2.0.11",
     "@types/uuid": "^8.3.4",
@@ -37,10 +39,13 @@
   },
   "dependencies": {
     "@joi/date": "^2.1.0",
+    "bcrypt": "^5.0.1",
     "cors": "^2.8.5",
+    "dotenv": "^16.0.1",
     "express": "4.17.2",
     "http-status-codes": "^2.2.0",
     "joi": "^17.6.0",
+    "jsonwebtoken": "^8.5.1",
     "pg": "^8.7.3",
     "reflect-metadata": "^0.1.13",
     "typeorm": "^0.3.6",
