--- a/.env.example
+++ b/.env.example
@@ -7,4 +7,5 @@ DATABASE_USERNAME=budget-manager
 DATABASE_PASSWORD=123456
 DATABASE_NAME=budget-manager
 
-JWT_SECRET=secret
+JWT_ACCESSS_TOKEN_SECRET=ACCESSS_TOKEN_SECRET
+JWT_REFRESH_TOKEN_SECRET=REFRESH_TOKEN_SECRET
