--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "typescript-api-skeleton",
+  "name": "challenge-full-stack-alkemy-backend",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node ./dist/src/server.js",
+    "start": "node ./dist/server.js",
     "dev": "ts-node-dev ./src/server.ts",
     "build": "tsc",
     "lint": "eslint --ignore-path .gitignore . --ext .ts",
@@ -14,14 +14,14 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "@types/bcrypt": "^5.0.0",
-    "@types/cors": "^2.8.12",
+    "@types/bcrypt": "5.0.0",
+    "@types/cors": "2.8.12",
     "@types/express": "4.17.13",
     "@types/jest": "27.4.0",
-    "@types/jsonwebtoken": "^8.5.8",
+    "@types/jsonwebtoken": "8.5.8",
     "@types/node": "17.0.17",
     "@types/supertest": "2.0.11",
-    "@types/uuid": "^8.3.4",
+    "@types/uuid": "8.3.4",
     "@typescript-eslint/eslint-plugin": "5.11.0",
     "@typescript-eslint/parser": "5.11.0",
     "eslint": "8.9.0",
@@ -34,21 +34,21 @@
     "prettier": "2.5.1",
     "supertest": "6.2.2",
     "ts-jest": "27.1.3",
-    "ts-node-dev": "^2.0.0-0",
+    "ts-node-dev": "2.0.0-0",
     "typescript": "4.5.5"
   },
   "dependencies": {
-    "@joi/date": "^2.1.0",
-    "bcrypt": "^5.0.1",
-    "cors": "^2.8.5",
-    "dotenv": "^16.0.1",
+    "@joi/date": "2.1.0",
+    "bcrypt": "5.0.1",
+    "cors": "2.8.5",
+    "dotenv": "16.0.1",
     "express": "4.17.2",
-    "http-status-codes": "^2.2.0",
-    "joi": "^17.6.0",
-    "jsonwebtoken": "^8.5.1",
-    "pg": "^8.7.3",
-    "reflect-metadata": "^0.1.13",
-    "typeorm": "^0.3.6",
-    "uuid": "^8.3.2"
+    "http-status-codes": "2.2.0",
+    "joi": "17.6.0",
+    "jsonwebtoken": "8.5.1",
+    "pg": "8.7.3",
+    "reflect-metadata": "0.1.13",
+    "typeorm": "0.3.6",
+    "uuid": "8.3.2"
   }
 }
