--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,6 +5,18 @@
 		"emitDecoratorMetadata": true,
 		"module": "commonjs",
 		"moduleResolution": "node",
+		"resolveJsonModule": true,
+		"sourceMap": true,
+		"outDir": "./dist",
+		"esModuleInterop": true,
+		"forceConsistentCasingInFileNames": false,
+		"strict": true,
+		"strictPropertyInitialization": true,
+		"skipLibCheck": true,
+		"noUnusedLocals": true,
+		"noUnusedParameters": true,
+		"noImplicitReturns": true,
+		"noFallthroughCasesInSwitch": true,
 		"baseUrl": ".",
 		"paths": {
 			"@/Users/*": ["src/users/*"],
@@ -13,15 +25,7 @@
 			"@/Shared/*": ["src/shared/*"],
 			"@/Budgets/*": ["src/budgets/*"],
 			"@/Auth/*": ["src/auth/*"]
-		},
-		"resolveJsonModule": true,
-		"sourceMap": true,
-		"outDir": "./dist",
-		"esModuleInterop": true,
-		"forceConsistentCasingInFileNames": false,
-		"strict": true,
-		"strictPropertyInitialization": false,
-		"skipLibCheck": true
+		}
 	},
 	"include": ["src/**/*", "__TESTS__"],
 	"exclude": ["node_modules", "dist", "jest.config.ts"]
