--- a/package.json
+++ b/package.json
@@ -6,10 +6,11 @@
 	"private": true,
 	"license": "UNLICENSED",
 	"scripts": {
+		"env:load": "dotenv -e .env.development.local",
 		"build": "nest build",
 		"format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
 		"start": "nest start",
-		"start:dev": "nest start --watch",
+		"start:dev": "pnpm env:load -- nest start --watch",
 		"start:debug": "nest start --debug --watch",
 		"start:prod": "node dist/main",
 		"lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
@@ -17,12 +18,23 @@
 		"test:watch": "jest --watch",
 		"test:cov": "jest --coverage",
 		"test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
-		"test:e2e": "jest --config ./test/jest-e2e.json"
+		"test:e2e": "jest --config ./test/jest-e2e.json",
+		"migrate": "pnpm env:load -- prisma migrate",
+		"migrate:dev": "pnpm migrate dev"
 	},
 	"dependencies": {
+		"@anatine/zod-nestjs": "1.8.0",
+		"@anatine/zod-openapi": "1.11.1",
 		"@nestjs/common": "9.0.0",
+		"@nestjs/config": "2.2.0",
 		"@nestjs/core": "9.0.0",
+		"@nestjs/jwt": "10.0.1",
 		"@nestjs/platform-express": "9.0.0",
+		"@nestjs/swagger": "6.1.4",
+		"@prisma/client": "4.8.1",
+		"bcrypt": "5.1.0",
+		"openapi3-ts": "3.1.2",
+		"passport-jwt": "4.0.1",
 		"reflect-metadata": "0.1.13",
 		"rxjs": "7.2.0",
 		"zod": "3.20.2"
@@ -31,12 +43,15 @@
 		"@nestjs/cli": "9.0.0",
 		"@nestjs/schematics": "9.0.0",
 		"@nestjs/testing": "9.0.0",
+		"@types/bcrypt": "5.0.0",
 		"@types/express": "4.17.13",
 		"@types/jest": "29.2.4",
 		"@types/node": "18.11.18",
+		"@types/passport-jwt": "3.0.8",
 		"@types/supertest": "2.0.11",
 		"@typescript-eslint/eslint-plugin": "5.0.0",
 		"@typescript-eslint/parser": "5.0.0",
+		"dotenv-cli": "6.0.0",
 		"eslint": "8.0.1",
 		"eslint-config-prettier": "8.3.0",
 		"eslint-plugin-import": "2.26.0",
@@ -44,6 +59,7 @@
 		"eslint-plugin-simple-import-sort": "8.0.0",
 		"jest": "29.3.1",
 		"prettier": "2.3.2",
+		"prisma": "4.8.1",
 		"source-map-support": "0.5.20",
 		"supertest": "6.1.3",
 		"ts-jest": "29.0.3",
