--- a/package.json
+++ b/package.json
@@ -14,10 +14,11 @@
 		"start:prod": "node dist/main",
 		"lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
 		"test": "jest",
-		"test:watch": "jest --watch",
+		"test:watch": "pnpm env:load:test -- jest --watch",
 		"test:cov": "jest --coverage",
 		"test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
 		"test:e2e": "jest --config ./test/jest-e2e.json",
+		"env:load:test": "dotenv -e .env.test.local",
 		"env:load": "dotenv -e .env.development.local",
 		"migrate": "pnpm env:load -- prisma migrate",
 		"migrate:dev": "pnpm migrate dev",
@@ -30,6 +31,7 @@
 		"@nestjs/config": "2.2.0",
 		"@nestjs/core": "9.0.0",
 		"@nestjs/jwt": "10.0.1",
+		"@nestjs/passport": "9.0.0",
 		"@nestjs/platform-express": "9.0.0",
 		"@nestjs/swagger": "6.1.4",
 		"@prisma/client": "4.8.1",
