--- a/package.json
+++ b/package.json
@@ -58,7 +58,7 @@
 		"@types/supertest": "2.0.11",
 		"@typescript-eslint/eslint-plugin": "5.0.0",
 		"@typescript-eslint/parser": "5.0.0",
-		"dotenv-cli": "6.0.0",
+		"dotenv-cli": "7.0.0",
 		"eslint": "8.0.1",
 		"eslint-config-prettier": "8.3.0",
 		"eslint-plugin-import": "2.26.0",
@@ -71,8 +71,11 @@
 		"supertest": "6.1.3",
 		"ts-jest": "29.0.3",
 		"ts-loader": "9.2.3",
-		"ts-node": "10.0.0",
+		"ts-node": "10.9.1",
 		"tsconfig-paths": "4.1.1",
 		"typescript": "4.7.4"
+	},
+	"prisma": {
+		"seed": "dotenv -e .env.development.local -- ts-node --compiler-options {\"module\":\"CommonJS\"} seeders/seed.ts"
 	}
 }
