--- a/tsconfig.json
+++ b/tsconfig.json
@@ -24,6 +24,7 @@
 		"noUncheckedIndexedAccess": true,
 		"strict": true,
 		"paths": {
+			"@/Currency/*": ["src/currency/*"],
 			"@/Users/*": ["src/users/*"],
 			"@/Shared/*": ["src/shared/*"],
 			"@/Database/*": ["src/database/*"],
