refactor: updated currencies endpoints

--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
 		"@types/bcrypt": "5.0.0",
 		"@types/express": "4.17.13",
 		"@types/jest": "29.2.4",
+		"@types/morgan": "1.9.4",
 		"@types/node": "18.11.18",
 		"@types/passport-jwt": "3.0.8",
 		"@types/request-ip": "0.0.37",
@@ -65,6 +66,7 @@
 		"eslint-plugin-prettier": "4.0.0",
 		"eslint-plugin-simple-import-sort": "8.0.0",
 		"jest": "29.3.1",
+		"morgan": "1.10.0",
 		"prettier": "2.3.2",
 		"prisma": "4.8.1",
 		"source-map-support": "0.5.20",
