feat: added movement find all endpoint

--- a/vercel.json
+++ b/vercel.json
@@ -11,7 +11,7 @@
 		{
 			"src": "/(.*)",
 			"dest": "dist/src/main.js",
-			"methods": ["GET", "POST", "PUT", "PATCH", "DELETE"]
+			"methods": ["GET", "POST", "PUT", "PATCH", "DELETE", "OPTIONS"]
 		}
 	]
 }
